MUPS 2017 K3 parametri torusa

--- a/Godina4/MUPS/Rokovi/2017K3.md
+++ b/Godina4/MUPS/Rokovi/2017K3.md
@@ -24,3 +24,10 @@ Problem u održavanju inkluzije može biti njena implementacija, i to se može d
 **4. [15] Kojoj grupi interkonekcionih mreža pripada 3D torus? Objasniti način povezivanja i nacrtati ovu mrežu. Koje su vrednosti karakterističnih parametara mreže?**
 
 3D torus pripada grupi direktnih interkonekcionih mreža. Način povezivanja je takav da su čvorovi povezani u 3D matricu, gde je svaki čvor povezan _point-to-point_ konekcijom sa svojih 8 suseda. Smatra se da element na indeksu 0 ima suseda na indeksu N.
+
+Vrednosti karakterističnih parametara:
+- _d_ = 6
+- _D_ = (<sup>3</sup>&radic;_N_ - 1)
+- _B_ = 3<sup>3</sup>&radic;_N_
+- Simetričan
+- Regularan
