--- a/Godina4/MUPS/Rokovi/2017K3.md
+++ b/Godina4/MUPS/Rokovi/2017K3.md
@@ -1,6 +1,6 @@
 **1. [15] Objasniti šta se dešava pri zameni u keš memoriji u sistemu sa directory protokolom. Diskutovati projektne alternative pri zameni kopije u kešu koja je ažurna sa memorijom u zavisnosti od vrste _directory_ protokola (_full-map_, _Dir<sub>i</sub> B_, _Dir<sub>i</sub> NB_) i karakteristika pristupa**
 
-Pri svakoj zameni, ako je upisivano u blok koji se nalazio u kešu, mora se obavestiti njegov matični čvor, i u matičnom čvoru ažurirati sadržaj bloka. Dakle, pri zameni _d_ bit postaje jednak nuli. Kada posmatramo slučaj da je kopija u kešu ažurna, ovo se neće desiti. U slučaju _full-map_ protokola, samo se _valid_ bit tog bloka i tog procesora resetuje, i nije potrebna nikakva dodatna akcija protokola. U slučaju _Dir<sub>i</sub> B_ protokola, može se desiti jedna od dve situacije. 1) Overflow bit je setovan - u ovom slučaju može se desiti ili da postoji pointer na procesor koji upravo oslobađa kopiju, u kom slučaju se taj pointer oslobađa, ali overflow bit i dalje ostaje setovan, ili da ne postoji pointer na ovaj procesor, u kom slučaju se kao akcija protokola ne radi apsolutno ništa. 2) Overflow bit nije setovan - u ovom slučaju sigurno mora da postoji pointer na procesor koji oslobađa blok, i taj pointer se oslobađa kao jedina akcija protokola. Sve ove akcije protokola se vrše na matičnom čvoru bloka koji se oslobađa.
+Pri svakoj zameni, ako je upisivano u blok koji se nalazio u kešu, mora se obavestiti njegov matični čvor, i u matičnom čvoru ažurirati sadržaj bloka. Dakle, pri zameni _d_ bit postaje jednak nuli. Kada posmatramo slučaj da je kopija u kešu ažurna, ovo se neće desiti, i može se, a ne mora, zamena prijaviti matičnom čvoru. Sledeće situacije posmatramo samo u slučaju ako se zamena prijavljuje matičnom čvoru. U slučaju _full-map_ protokola, samo se _valid_ bit tog bloka i tog procesora resetuje, i nije potrebna nikakva dodatna akcija protokola. U slučaju _Dir<sub>i</sub> B_ protokola, može se desiti jedna od dve situacije. 1) Overflow bit je setovan - u ovom slučaju može se desiti ili da postoji pointer na procesor koji upravo oslobađa kopiju, u kom slučaju se taj pointer oslobađa, ali overflow bit i dalje ostaje setovan, ili da ne postoji pointer na ovaj procesor, u kom slučaju se kao akcija protokola ne radi apsolutno ništa. 2) Overflow bit nije setovan - u ovom slučaju sigurno mora da postoji pointer na procesor koji oslobađa blok, i taj pointer se oslobađa kao jedina akcija protokola. Sve ove akcije protokola se vrše na matičnom čvoru bloka koji se oslobađa.
 
 **2. [15] Šta je motivacija za tehniku smanjivanja “visine” kataloga? Ukratko objasniti implementaciju. Objasniti šta je osnovna prednost, a šta nedostatak?**
 
