--- a/Godina4/MUPS/Rokovi/2017K3.md
+++ b/Godina4/MUPS/Rokovi/2017K3.md
@@ -28,6 +28,6 @@ Problem u održavanju inkluzije može biti njena implementacija, i to se može d
 Vrednosti karakterističnih parametara:
 - _d_ = 6
 - _D_ = (<sup>3</sup>&radic;_N_ - 1)
-- _B_ = 4<sup>3</sup>&radic;_N_
+- _B_ = 2 * <sup>3</sup>&radic;(_N_<sup>2</sup>)
 - Simetričan
 - Regularan
