--- a/Godina4/MUPS/Rokovi/2017K3.md
+++ b/Godina4/MUPS/Rokovi/2017K3.md
@@ -1,13 +1,13 @@
 **1. [15] Objasniti šta se dešava pri zameni u keš memoriji u sistemu sa directory protokolom. Diskutovati projektne alternative pri zameni kopije u kešu koja je ažurna sa memorijom u zavisnosti od vrste _directory_ protokola (_full-map_, _Dir<sub>i</sub> B_, _Dir<sub>i</sub> NB_) i karakteristika pristupa**
 
-Pri svakoj zameni, ako je upisivano u blok koji se nalazio u kešu, mora se obavestiti njegov matični čvor, i u matičnom čvoru ažurirati sadržaj bloka. Dakle, pri zameni _d_ bit postaje jednak nuli. Kada posmatramo slučaj da je kopija u kešu ažurna, ovo se neće desiti, i može se, a ne mora, zamena prijaviti matičnom čvoru. Sledeće situacije posmatramo samo u slučaju ako se zamena prijavljuje matičnom čvoru. U slučaju _full-map_ protokola, samo se _valid_ bit tog bloka i tog procesora resetuje, i nije potrebna nikakva dodatna akcija protokola. U slučaju _Dir<sub>i</sub> B_ protokola, može se desiti jedna od dve situacije. 1) Overflow bit je setovan - u ovom slučaju može se desiti ili da postoji pointer na procesor koji upravo oslobađa kopiju, u kom slučaju se taj pointer oslobađa, ali overflow bit i dalje ostaje setovan, ili da ne postoji pointer na ovaj procesor, u kom slučaju se kao akcija protokola ne radi apsolutno ništa. 2) Overflow bit nije setovan - u ovom slučaju sigurno mora da postoji pointer na procesor koji oslobađa blok, i taj pointer se oslobađa kao jedina akcija protokola. Sve ove akcije protokola se vrše na matičnom čvoru bloka koji se oslobađa.
+Pri svakoj zameni, ako je upisivano u blok koji se nalazio u kešu, mora se obavestiti njegov matični čvor, i u matičnom čvoru ažurirati sadržaj bloka. Dakle, pri zameni _d_ bit postaje jednak nuli. Kada posmatramo slučaj da je kopija u kešu ažurna, ovo se neće desiti, i može se, a ne mora, zamena prijaviti matičnom čvoru. Sledeće situacije posmatramo samo u slučaju ako se zamena prijavljuje matičnom čvoru. U slučaju _full-map_ protokola, samo se _valid_ bit tog bloka i tog procesora resetuje, i nije potrebna nikakva dodatna akcija protokola. U slučaju _Dir<sub>i</sub> B_ protokola, može se desiti jedna od dve situacije. 1) Overflow bit je setovan - u ovom slučaju može se desiti ili da postoji pointer na procesor koji upravo oslobađa kopiju, u kom slučaju se taj pointer oslobađa, ali overflow bit i dalje ostaje setovan, ili da ne postoji pointer na ovaj procesor, u kom slučaju se kao akcija protokola ne radi apsolutno ništa. 2) Overflow bit nije setovan - u ovom slučaju sigurno mora da postoji pointer na procesor koji oslobađa blok, i taj pointer se oslobađa kao jedina akcija protokola. Sve ove akcije protokola se vrše na matičnom čvoru bloka koji se oslobađa. U slučaju _Dir<sub>i</sub> NB_ protokola, dešava se isto što i sa _B_ protokolom, samo što je postoji slučaj kada je overflow bit setovan, jer overflow bit ne postoji.
 
 **2. [15] Šta je motivacija za tehniku smanjivanja “visine” kataloga? Ukratko objasniti implementaciju. Objasniti šta je osnovna prednost, a šta nedostatak?**
 
 Svaki _full-map_ katalog ima dve dimenzije, broj procesora (P), i broj blokova (M). Za visinu kataloga se uzima njegova M dimenzija. Motivacija za smanjivanje bilo koje dimenzije kataloga je to što se tako dobija bolja prostorna složenost kataloga. Postoji nekoliko načina za postizanje manje visine kataloga. Osnovna prednost svake od sledećih tehnika je smanjenje prostorne složenosti kataloga.
 
 - Poveća se veličina bloka. Ovako je veličina kataloga i dalje linearna po M, ali je K puta manja, gde je K konstanta koliko se puta povećao blok. Osnovni nedostatak ove tehnike je povećanje _false sharing_-a.
-- Ulazi po M dimenziji se ne čuvaju kao niz, nego kao mala keš memorija, sa K ulaza (K < M). Nedostatak ove tehinike je u tome što se može desiti da nam treba više od K ulaza, što znači da neki od ulaza moramo da izbacimo (zavisno od algoritma evikcije iz keša). U slučaju izbacivanja nekog od ulaza, moramo da invalidiramo sve kopije bloka koji taj ulaz predstavlja.
+- Ulazi po M dimenziji se ne čuvaju kao niz, nego kao mala keš memorija, sa K ulaza (K < M). Nedostatak ove tehinike je u tome što se može desiti da nam treba više od K ulaza, što znači da neki od ulaza moramo da izbacimo (zavisno od algoritma evikcije iz keša). U slučaju izbacivanja nekog od ulaza, moramo da invalidiramo sve kopije bloka koji taj ulaz predstavlja. Prednost ove tehnike je u tome što neki blokovi verovatno neće nikad biti deljeni, tako da velika je šansa da ako dobro izaberemo dimenziju keš memorije, nikad nećemo dobiti njeno prepunjenje.
 
 **3. [15] Koje su prednosti i koji su problemi u održavanju inkluzije u hijerarhijama keš memorija? Ilustrovati jedan takav problem u dvonivoskoj hijerarhiji set-asocijativnih keš memorija sa LRU strategijom zamene.**
 
@@ -31,3 +31,71 @@ Vrednosti karakterističnih parametara:
 - _B_ = 2 * <sup>3</sup>&radic;(_N_<sup>2</sup>)
 - Simetričan
 - Regularan
+
+**5. [15] U priloženom kodu su prikazana dva načina za predstavljanje slike u RGB formatu. Prvi kod koristi pristup niza struktura (array of structures), dok drugi kod koristi pristup strukture nizova (structure of arrays). Diskutovati prednosti i nedostatke jednog i drugog pristupa i navesti koji pristup daje bolje performanse na CUDA platformi i u kojim slučajevima?**
+
+**Array of structures:**
+
+```C
+struct {
+    uint8_t r, g, b;
+} AoS[N];
+```
+
+**Structure of arrays:**
+
+```C
+struct {
+    uint8_t r[N];
+    uint8_t g[N];
+    uint8_t b[N];
+} SoA;
+```
+
+Slučaj strukture nizova je bolju iz pogleda _memory interleaving_-a. Ako niti rade nekakvu obradu nad prvo _r_ komponentom, pa _g_ komponentom, pa _b_ komponentom, obrada će biti potpuno _interleaved_. U slučaju niza struktura, svaka obrada komponente će koristiti samo trećinu performansi _memory interleaving_-a.
+
+**6. [10] Šta označava pojam _branch divergence_ i kako on utiče na izvršavanje koda na SIMD procesorima? Objasniti kada i kako se ovaj efekat javlja kod CUDA grafičkih procesora.**
+
+Kod SIMD procesora važi da sve niti jednog _warp_-a u jednom trenutku izvršavaju istu instrukciju. U slučaju da postoji uslovno grananje unutar koda, sve niti spekulativno izvršavaju obe grane, a onda se prihvati rezultat samo one grane čiji je uslov ispunjen. U slučaju da je uslov različit u različitim nitima _warp_-a, dolazi do velikog _overhead_-a zbog prihvatanja rezultata različitih instrukcija unutar istog _warp_-a.
+
+**7. [15] Koristeći CUDA tehnologiju paralelizovati kod koji je dat u prilogu. Kod vrši određene proračune u simulaciji prostiranja talasa na žici. Napisati odgovarajući kod za grafički procesor, kao i deo koda za centralni procesor koji vrši njegovo pozivanje. Smatrati da su svi memorijski transferi već obavljeni. Obratiti pažnju na efikasnost paralelizacije**
+
+```C
+for (i = 0; i < nsteps; i++) {
+    for (j = 0; j < tpoints; j++) {
+        if ((j == 0) || (j == tpoints-1))
+            newval[j] = 0.0;
+        else
+            newval[j] = (2.0 * values[j]) - oldval[j] + (sqtau * (values[j-1] - (2.0 * values[j]) + values[j+1]));
+    }
+    for (j = 0; j < tpoints; j++) {
+        oldval[j] = values[j];
+        values[j] = newval[j];
+    }
+}
+```
+
+**Rešenje:**
+
+```C
+__global__ void kernelFunc(int *oldval, int *values, int tpoints) {
+    for (i = 0; i < nsteps; i++) {
+        int newval = 0;
+        int j = threadIdx.x;
+        if ((j == 0) || (j == tpoints-1))
+            newval = 0.0;
+        else
+            newval = (2.0 * values[j]) - oldval[j] + (sqtau * (values[j-1] - (2.0 * values[j]) + values[j+1]));
+        oldval[j] = values[j];
+        values[j] = newval; 
+    }
+}
+
+int main() {
+    // ...
+    dim3 dimGrid(tpoints, 1, 1);
+    kernelFunc<<<DimGrid>>>(oldval, values, tpoints);
+    // ...
+}
+
+```
