--- a/Godina4/MUPS/Rokovi/2017K3.md
+++ b/Godina4/MUPS/Rokovi/2017K3.md
@@ -78,23 +78,24 @@ for (i = 0; i < nsteps; i++) {
 **Rešenje:**
 
 ```C
-__global__ void kernelFunc(int *oldval, int *values, int tpoints) {
+__global__ void kernelFunc(int *oldval, int *values, int tpoints, int nsteps, int sqtau) {
     for (i = 0; i < nsteps; i++) {
         int newval = 0;
         int j = threadIdx.x;
-        if ((j == 0) || (j == tpoints-1))
+        if ((j == 0) || (j >= tpoints-1))
             newval = 0.0;
         else
             newval = (2.0 * values[j]) - oldval[j] + (sqtau * (values[j-1] - (2.0 * values[j]) + values[j+1]));
+        __syncthreads();
         oldval[j] = values[j];
-        values[j] = newval; 
+        values[j] = newval;
     }
 }
 
 int main() {
     // ...
     dim3 dimGrid(tpoints, 1, 1);
-    kernelFunc<<<DimGrid>>>(oldval, values, tpoints);
+    kernelFunc<<<DimGrid>>>(oldval, values, tpoints, steps, sqtau);
     // ...
 }
 
