--- a/Godina4/MUPS/Rokovi/2016K3.md
+++ b/Godina4/MUPS/Rokovi/2016K3.md
@@ -30,3 +30,62 @@ U slučaju da se desi RH ili WH u L1 kešu, i u slučaju da je LRU algoritam zam
 - Simetričnost grafa - poželjno je da bude simetričan, jer onda svi čvorovi vide isti graf, i u slučaju uniformnih poruka, iz svih čvorova imamo isto opterećenje
 - Regularnost grafa - graf je regularan ako je stepen svih čvorova isti. Poželjno je da bude regularan, jer onda uprošćava komunikaciju
 - _B_ - Propusni opseg najmanje bisekcije - bisekcija je podela grafa na dva dela, najmanja bisekcija je bisekcija koja prolazi kroz najmanje grana. Propusni opseg je bitan za _all-to-all_ algoritme, i treba nam što veći, da bi bilo što manje kašnjenje.
+
+**5. [15] Zadati deo nekog CUDA jezgra poseduje jedan značajan nedostatak. Koji je to nedostatak, kako utiče na izvršavanje koda i kako bi se mogao prevazići?**
+
+```C
+for (int i = 0; i < blockDim.x; i++) {
+    if (threadIdx.x % 2) sdata[threadIdx.x] ^= sdata[i] & MASK1;
+    else sdata[threadIdx.x] ^= sdata[i] & MASK2;
+}
+```
+
+**Rešenje:**
+
+Nedostatak je u tome što postoji branch divergence. Problem može da se prevaziđe tako što se pokrene duplo manje niti, koje rade duplo veći posao - svaka nova nit radi i ono što radi stara parna nit, i ono što radi stara neparna nit
+
+```C
+for (int i = 0; i < blockDim.x; i++) {
+    sdata[threadIdx.x * 2] ^= sdata[i] & MASK1;
+    sdata[threadIdx.x * 2 + 1] ^= sdata[i] & MASK2;
+}
+```
+
+**6. [10] Kako se vrši alokacija registara na grafičkom procesoru i da li to može da utiče na performanse izvršavanog jezgra?**
+
+Svaka multiprocesorska jedinica ima N registara, i registri se dinamički dodeljuju nitima blokova koji se trenutno izvršavaju na konkretnoj multiprocesorskoj jedinici. Broj blokova koji mogu da se izvršavaju na jednoj jedinici direktno zavisi od broja raspoloživih registara te jedinice - izvršavaće se onoliko registara koliko je moguće, a da svi blokovi imaju onoliko registara kolike su njihove potrebe. Ako bi dodavanje bloka na multiprocesorsku jedinicu prouzrokovalo nedostatak registara, taj blok neće biti izvršavan na toj jedinici.
+
+**7. [15] Zadato jezgro CUDA vrši kompletnu obradu korišćenjem globalne memorije. Napisati ponovo jezgro, tako da se koristi deljena memorija. Obrazložiti kako korišćenje deljene memorije može da doprinese poboljšanju performansi u ovom konkretnom slučaju.**
+
+```C
+__global__ void averageKernel (int* devA, int* devB, int n){
+    int idx = blockDim.x * blockIdx.x + threadIdx.x;
+    int left, right;
+    left = idx > 0 ? idx - 1 : 0;
+    right = idx < n - 1 ? idx + 1 : n - 1;
+    if( idx < n ) {
+        devB[idx] = (devA[left] + devA[idx] + devA[right]) / 3;
+    }
+}
+```
+
+**Rešenje:**
+
+Problem je ovde u tome što svaka nit čita tri elementa iz globalne memorije, što znači da inače imamo tri puta više čitanja nego što nam treba. Optimizacija je da sve niti jednom učitaju sve elemente u deljenu memoriju, a onda da tri puta čitaju iz deljene, koja je brža od globalne.
+
+```C
+__global__ void averageKernel (int* devA, int* devB, int n){
+    __shared__ int sharedDevA[n];
+    int idx = blockDim.x * blockIdx.x + threadIdx.x;
+    int left, right;
+
+    sharedDevA[idx] = devA[idx];
+    __syncthreads();
+
+    left = idx > 0 ? idx - 1 : 0;
+    right = idx < n - 1 ? idx + 1 : n - 1;
+    if( idx < n ) {
+        devB[idx] = (sharedDevA[left] + sharedDevA[idx] + sharedDevA[right]) / 3;
+    }
+}
+```
